--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,10 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+2D_Iso_Project/Assets/Arts/Tilemaps/Isometric/Sprites/STONE_TILES_GREEN.meta
+2D_Iso_Project/Assets/Arts/Tilemaps/Isometric/Sprites/STONE_TILES.meta
+2D_Iso_Project/Assets/Arts/Scene.meta
+2D_Iso_Project/Assets/_External/2DGamekit/Scripts/Objects.meta
+2D_Iso_Project/Assets/_External/2DGamekit/Scripts.meta
+2D_Iso_Project/Assets/_External/2DGamekit/Prefabs/Interactables.meta
+2D_Iso_Project/Assets/_External/2DGamekit/Prefabs.meta
